Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriIntegerRetinteger.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, integer> yoda
        integer ret = yoda:useForce(one, two)
        output "passed"
     end
end
