Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypeObjPriIntegerRettextFail.quorum
class Main
    action Main
        Integer one
        one:SetValue(66)
        integer two = 66
        Yoda<Integer, integer, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
